--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   geolocator: ^10.1.0
   google_fonts: ^6.1.0
   image_picker: ^1.0.5
+  intl: ^0.19.0
   package_info_plus: ^4.2.0
   skeletons: ^0.0.3
 
