--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   intl: ^0.19.0
   package_info_plus: ^4.2.0
   skeletons: ^0.0.3
+  flutter_svg:
 
 dev_dependencies:
   flutter_lints: ^2.0.0
