--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   package_info_plus: ^4.2.0
   skeletons: ^0.0.3
   flutter_svg:
+  pull_to_refresh: 
 
 dev_dependencies:
   flutter_lints: ^2.0.0
