--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,8 +48,10 @@ dependencies:
   intl: ^0.19.0
   package_info_plus: ^4.2.0
   skeletons: ^0.0.3
-  flutter_svg:
-  pull_to_refresh: 
+  flutter_svg: ^2.0.10+1
+  pull_to_refresh: ^2.0.0
+  geocoding: ^2.1.0
+  app_settings: 
 
 dev_dependencies:
   flutter_lints: ^2.0.0
